--- a/app/views/ideas/index.html.erb
+++ b/app/views/ideas/index.html.erb
@@ -1,1 +1,12 @@
-placeholder for ideas#index
+<div class="container">
+  <div class="row">
+
+    <div class="col-sm-9">
+      <%= render "ideas_list" %>
+    </div>
+
+    <div class="col-sm-3">
+    </div>
+
+  </div>
+</div>
