Add font-awesome-rails gem, add user-idea association.

--- a/app/views/ideas/_ideas_list.html.erb
+++ b/app/views/ideas/_ideas_list.html.erb
@@ -1,7 +1,4 @@
-<h3>
-  Ideas List
-  <span><%= link_to "+idea", new_idea_path %></span>
-</h3>
+<h3>Ideas List</h3>
 <table class="table table-hover">
   <tbody>
     <% @ideas.each do |idea| %>
