--- a/app/views/structure/_navbar.html.erb
+++ b/app/views/structure/_navbar.html.erb
@@ -28,7 +28,11 @@
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Link</a></li>
+        <li>
+          <%= link_to new_idea_path do %>
+            <i class="fa fa-plus-square fa-lg" aria-hidden="true"></i>
+          <% end %>
+        </li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu">
