--- a/app/views/ideas/index.html.erb
+++ b/app/views/ideas/index.html.erb
@@ -1,8 +1,43 @@
 <div class="container">
   <div class="row">
 
-    <div class="col-sm-9">
-      <%= render "ideas_list" %>
+    <div class="col-sm-10">
+
+      <div class="col-md-2">
+        <h3>這邊要放tags</h3>
+      </div>
+
+      <div class="col-md-10">
+
+        <table class="table table-hover">
+
+          <h3>
+            Ideas List
+            <span class="pull-right">
+              <%= link_to new_idea_path do %>
+                <i class="fa fa-plus-square fa-lg" aria-hidden="true"></i>
+              <% end %>
+            </span>
+          </h3>
+
+          <tbody>
+            <% @ideas.each do |idea| %>
+              <tr>
+                <td class="col-md-2">
+                  <i class="fa fa-heart-o fa-lg" aria-hidden="true"></i>
+                </td>
+
+                <td class="col-md-10">
+                  <h4><%= link_to idea.title, idea_path(idea) %></h4>
+                  <p><%= idea.description %></p>
+                </td>
+              </tr>
+            <% end %>
+          </tbody>
+
+        </table>
+      </div>
+
     </div>
 
     <div class="col-sm-3">
