Add favoriting system using polymorphic associations, add idea-favorited count.

--- a/app/views/ideas/index.html.erb
+++ b/app/views/ideas/index.html.erb
@@ -24,7 +24,24 @@
             <% @ideas.each do |idea| %>
               <tr>
                 <td class="col-md-2">
-                  <i class="fa fa-heart-o fa-lg" aria-hidden="true"></i>
+
+                  <div class="fav-icon">
+
+                    <% if current_user %>
+                      <% if !current_user.favorite_ideas.exists?(id: idea.id) %>
+                        <%= link_to favorite_ideas_path(idea_id: idea), method: :post do %>
+                          <i class="fa fa-heart-o fa-lg" aria-hidden="true"></i>
+                        <% end %>
+                      <% else %>
+                        <%= link_to favorite_idea_path(idea), method: :delete do %>
+                          <i class="fa fa-heart fa-lg" aria-hidden="true"></i>
+                        <% end %>
+                      <% end %>
+                    <% end %>
+                    <%= idea.fans.count %>
+
+                  </div>
+
                 </td>
 
                 <td class="col-md-10">
