--- a/app/assets/stylesheets/favorite_ideas.scss
+++ b/app/assets/stylesheets/favorite_ideas.scss
@@ -1,7 +1,3 @@
-// Place all the styles related to the ideas controller here.
+// Place all the styles related to the favorite_ideas controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-
-.fav-icon {
-
-}
