--- a/app/views/ideas/show.html.erb
+++ b/app/views/ideas/show.html.erb
@@ -2,3 +2,5 @@
 <%= @idea.description %>
 <%= link_to "edit", edit_idea_path(@idea) %>
 <%= link_to "delete", idea_path(@idea), method: :delete %>
+
+<%= render "disqus" %>
