Added welcome#index view, set route, added sign in/out function in navbar, tweaked view.

--- a/app/views/ideas/index.html.erb
+++ b/app/views/ideas/index.html.erb
@@ -28,6 +28,7 @@
                   <div class="fav-icon">
 
                     <% if current_user %>
+
                       <% if !current_user.favorite_ideas.exists?(id: idea.id) %>
                         <%= link_to favorite_ideas_path(idea_id: idea), method: :post do %>
                           <i class="fa fa-heart-o fa-lg" aria-hidden="true"></i>
@@ -37,8 +38,15 @@
                           <i class="fa fa-heart fa-lg" aria-hidden="true"></i>
                         <% end %>
                       <% end %>
+
+                    <% else %>
+                      <%= link_to favorite_ideas_path(idea_id: idea), method: :post do %>
+                        <i class="fa fa-heart-o fa-lg" aria-hidden="true"></i>
+                      <% end %>
                     <% end %>
+
                     <%= idea.fans.count %>
+
                     <div>
                       <i class="fa fa-comment-o fa-lg" aria-hidden="true"></i>
                       <a href="<%= url_for([idea, {only_path: false}]) %>#disqus_thread"></a>
