Added tagging system with act_as_taggable_on gem, added tag filter and tag cloud.

--- a/app/assets/stylesheets/ideas.scss
+++ b/app/assets/stylesheets/ideas.scss
@@ -5,3 +5,14 @@
 .fav-icon {
 
 }
+
+
+#tag_cloud {
+
+  line-height: 1.6em;
+  .xs { font-size: 0.6em; }
+  .s { font-size: 0.8em; }
+  .m { font-size: 1em; }
+  .l { font-size: 1.4em; }
+  .xl { font-size: 1.8em; }
+}
