--- a/app/views/ideas/edit.html.erb
+++ b/app/views/ideas/edit.html.erb
@@ -2,5 +2,6 @@
 <%= simple_form_for @idea do |f| %>
   <%= f.input :title, input_html: { class: "form-control"} %>
   <%= f.input :description, input_html: { class: "form-control"} %>
+  <%= f.input :tag_list %>
   <%= f.submit "Submit", data: {disable_with: "Submitting..."} %>
 <% end %>
