--- a/app/views/ideas/index.html.erb
+++ b/app/views/ideas/index.html.erb
@@ -1,14 +1,12 @@
 <div class="container">
   <div class="row">
 
-    <div class="col-sm-10">
+    <div class="col-md-9">
 
       <div class="col-md-2">
-        <h3>這邊要放tags</h3>
       </div>
 
       <div class="col-md-10">
-
         <table class="table table-hover">
 
           <h3>
@@ -23,7 +21,7 @@
           <tbody>
             <% @ideas.each do |idea| %>
               <tr>
-                <td class="col-md-2">
+                <td class="col-md-1">
 
                   <div class="fav-icon">
                     <% if current_user %>
@@ -51,10 +49,16 @@
 
                 </td>
 
-                <td class="col-md-10">
+                <td class="col-md-11">
                   <h4><%= link_to idea.title, idea_path(idea) %></h4>
                   <p><%= idea.description %></p>
+                  <p>
+                    <% unless idea.tag_list.count == 0 %>
+                      <b>Tags: </b><%= raw idea.tag_list.map { |t| link_to t, tag_path(t)}.join(', ') %>
+                    <% end %>
+                  </p>
                 </td>
+
               </tr>
             <% end %>
           </tbody>
@@ -64,7 +68,13 @@
 
     </div>
 
-    <div class="col-sm-3">
+    <div class="col-md-3">
+      <h4>Tag Cloud</h4>
+      <div id="tag_cloud">
+        <% tag_cloud Idea.tag_counts, %w[xs s m l xl] do |tag, css_class| %>
+          <%= link_to tag.name, tag_path(tag.name), class: css_class %>
+        <% end %>
+      </div>
     </div>
 
   </div>
