--- a/app/views/structure/_navbar.html.erb
+++ b/app/views/structure/_navbar.html.erb
@@ -11,21 +11,18 @@
     </div>
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-        <li><a href="#">Link</a></li>
-      </ul>
-
       <ul class="nav navbar-nav navbar-right">
         <% if !current_user %>
           <li><%= link_to("註冊", new_user_registration_path) %></li>
           <li><%= link_to("登入", new_user_session_path) %></li>
         <% else %>
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Settings <span class="caret"></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+              Hi, <%= current_user.username %>
+              <b class="caret"></b>
+            </a>
             <ul class="dropdown-menu">
-              <li><a href="#">Action</a></li>
-              <li><a href="#">Another action</a></li>
+              <li><%= link_to "Settings", edit_user_registration_path %></li>
               <li role="separator" class="divider"></li>
               <li><%= link_to("登出", destroy_user_session_path, method: :delete) %></li>
             </ul>
