--- a/app/assets/stylesheets/ideas.scss
+++ b/app/assets/stylesheets/ideas.scss
@@ -2,10 +2,15 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.fav-icon {
-
+.show-box {
+  border: thin solid #80919D;
+  border-radius: 5px;
 }
 
+.created-by {
+  color: #d3d3d3;
+  font-size: 10px;
+}
 
 #tag_cloud {
 
