Several tweaks for ideas/show view.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -11,6 +11,11 @@
  @import "icons_and_buttons.scss";
 
 
- #footer {
-   text-align: center;
- }
+
+#footer {
+  text-align: center;
+}
+
+#show-disqus {
+  padding-top: 80px;
+}
