--- a/app/assets/stylesheets/icons_and_buttons.scss
+++ b/app/assets/stylesheets/icons_and_buttons.scss
@@ -15,12 +15,25 @@
   border: 1px solid #e7e7e7;
   border-radius: 2px;
   font-size: 12px;
-  padding: 4px 9px;
+  padding: 4px 13px;
   margin: 3px;
 }
 
 .button:hover {
   background-color: #e7e7e7;
+}
+
+
+#show_icons {
+  margin-top: 23px;
+}
+
+.share-button {
+
+}
+
+#share_button {
+  padding-top: 14px;
 }
 
 #toppest_button {
