--- a/app/assets/stylesheets/ideas.scss
+++ b/app/assets/stylesheets/ideas.scss
@@ -3,8 +3,16 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .show-box {
-  border: thin solid #80919D;
-  border-radius: 5px;
+  border: 2px solid #e7e7e7;
+  border-radius: 7px;
+  padding-left: 20px;
+  padding-bottom: 145px;
+}
+
+.title {
+  display: inline-block;
+  font-size: 24px;
+  font-weight: bold;
 }
 
 .created-by {
@@ -12,8 +20,8 @@
   font-size: 10px;
 }
 
-#tag_cloud {
 
+#tag_cloud {
   line-height: 1.6em;
   .xs { font-size: 0.6em; }
   .s { font-size: 0.8em; }
