--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,6 @@
 <%= notice_message %>
 <%= yield %>
 
-<script id="dsq-count-scr" src="//ideahunt-3.disqus.com/count.js" async></script>
+<script id="dsq-count-scr" src="//ideahuntx.disqus.com/count.js" async></script>
 </body>
 </html>
